--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "moment": "^2.30.1",
     "qs": "^6.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
