--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "ionicons": "^8.0.9",
     "moment": "^2.30.1",
     "qs": "^6.14.0",
     "react": "^19.1.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -27,6 +29,7 @@
     "@eslint/js": "^9.29.0",
     "@types/qs": "^6.14.0",
     "@types/react": "^19.1.8",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
     "eslint": "^9.29.0",
