--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "ionicons": "^8.0.9",
@@ -24,6 +25,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
