live build ready

--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@mui/material": "^7.2.0",
     "@reduxjs/toolkit": "^2.8.2",
-    "@studio-freight/lenis": "^1.0.42",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "ionicons": "^8.0.9",
+    "mdb-react-ui-kit": "^9.0.0",
     "moment": "^2.30.1",
     "qs": "^6.14.0",
     "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.2",
@@ -36,7 +35,6 @@
     "@eslint/js": "^9.29.0",
     "@types/qs": "^6.14.0",
     "@types/react": "^19.1.8",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
     "cross-env": "^7.0.3",
